--- a/views/themes.jade
+++ b/views/themes.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h2 Good!
-  p Now associate themes with selected channels
+  p Now associate themes with selected channels.
 
   ul
     each channel in channels
