added web app theme model

--- a/views/themes.jade
+++ b/views/themes.jade
@@ -4,6 +4,14 @@ block content
   h2 Good!
   p Now associate themes with selected channels.
 
-  ul
-    each channel in channels
-      li ##{channel.name}
+  form(id="channels-themes" method="post")
+    ul
+      each channel in channels
+        li ##{channel.name}
+          br
+          each theme in themes
+            input(type="checkbox" id="#{channel.id}-#{theme.id}" name="themeIds[#{channel.id}]" value=theme.id)
+            label(for="#{channel.id}-#{theme.id}")= theme.name
+            br
+
+    input(type="submit")
