--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,8 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet' href='/stylesheets/style.css')
   body
     block content
-    script(type='text/javascript', src='/javascripts/index.js')
+    script(type='text/javascript' src='//code.jquery.com/jquery-2.2.0.min.js')
+    script(type='text/javascript' src='/javascripts/index.js')
