--- a/views/themes.jade
+++ b/views/themes.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h2 Good!
-  p Now associate themes with selected channels.
+  p Now associate themes with selected channels. Max 3 themes per channel.
 
   form(id="channels-themes" method="post")
     ul
@@ -11,7 +11,7 @@ block content
           br
           each userTheme in channel.themes
             - var checked = userTheme.status === 'subscribed'
-            input(type="checkbox" id=userTheme.id value=userTheme.id checked=checked)
+            input(type="checkbox" id=userTheme.id class="user-theme" name=channel.id value=userTheme.id checked=checked)
             label(for=userTheme.id)= userTheme.Theme.name
             br
 
