--- a/views/themes.jade
+++ b/views/themes.jade
@@ -15,4 +15,6 @@ block content
             label(for=userTheme.id)= userTheme.Theme.name
             br
 
+    a(href="/channels") Back
+    span= " | "
     input(type="submit")
