--- a/views/success.jade
+++ b/views/success.jade
@@ -2,4 +2,6 @@ extends layout
 
 block content
   h2 Thank you!
-  p Please invite our bot to selected channels so we can post insights. Good luck!
+  p Please invite @boris to selected channels so we can post insights. Good luck!
+
+  a(href="/themes") Back
