installed and configured webpack

--- a/views/channels.jade
+++ b/views/channels.jade
@@ -2,6 +2,8 @@ extends layout
 
 block content
   h2 Hey, #{team.name} team!
+
+  h3 Channels
   p Select one or more channels. We'll post insights there only when @boris will be invited.
 
   form(id="channels" method="post")
