--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,4 @@
 extends layout
 
 block content
-  h2 Welcome
-
-  a(href=slackButtonUrl)
-    img(alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x")
+  main(data-react-class="LandingApp" data-react-props={ slackButtonUrl: slackButtonUrl })
