created themes list component

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,8 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheet.bundle.css')
+    link(rel="stylesheet", href="/stylesheet.bundle.css")
   body
     block content
-    script(type='text/javascript', src='/javascript.bundle.js')
+    div(id="modal")
+    script(type="text/javascript", src="/javascript.bundle.js")
