--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,5 +5,5 @@ html
     link(rel="stylesheet", href="/stylesheet.bundle.css")
   body
     block content
-    div(id="modal")
+    div(id="modal" class="hidden")
     script(type="text/javascript", src="/javascript.bundle.js")
