--- a/public/stylesheet.bundle.css
+++ b/public/stylesheet.bundle.css
@@ -2083,6 +2083,11 @@ body {
 a {
   color: #00B7FF; }
 
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0; }
+
 div#modal.hidden {
   display: none; }
 
@@ -2091,3 +2096,11 @@ div#modal .modal-content {
 
 div#modal button {
   float: right; }
+
+.channels-list > li > i {
+  margin-right: 10px;
+  color: #C8C8C8; }
+  .channels-list > li > i.invited {
+    color: #3BC363; }
+  .channels-list > li > i.uninvited {
+    color: #FFC202; }
