--- a/views/landing.jade
+++ b/views/landing.jade
@@ -1,4 +1,8 @@
 extends layout
 
 block content
-  main(data-react-class="LandingApp" data-react-props={ slackButtonUrl: slackButtonUrl })
+  main(
+    data-react-class="LandingApp"
+    data-react-type="plain"
+    data-react-props={ slackButtonUrl: slackButtonUrl }
+  )
