--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,4 +6,5 @@ html
   body
     block content
     div(id="modal" class="hidden")
+    block pagescript
     script(type="text/javascript", src="/javascript.bundle.js")
