created time setting

--- a/views/configuration.jade
+++ b/views/configuration.jade
@@ -9,5 +9,6 @@ block pagescript
   script(type="text/javascript").
     window.__INITIAL_STATE__ = {
       team: !{JSON.stringify(team)},
-      channels: !{JSON.stringify(channels)}
+      channels: !{JSON.stringify(channels)},
+      timeSetting: !{JSON.stringify(timeSetting)}
     }
