--- a/frontend/stylesheets/index.scss
+++ b/frontend/stylesheets/index.scss
@@ -11,6 +11,15 @@ body {
   font: 14px Helvetica Neue, Helvetica, Arial, sans-serif;
 }
 
+main {
+  min-width: 750px;
+}
+
+h1 {
+  margin: 0;
+  font-weight: normal;
+}
+
 a {
   color: #00B7FF;
 }
@@ -19,10 +28,12 @@ ul {
   list-style: none;
   margin: 0;
   padding: 0;
+  line-height: 1.5em;
 }
 
 p {
   margin: 0;
+  line-height: 1.5em;
 }
 
 @import 'landing';
