--- a/frontend/stylesheets/index.scss
+++ b/frontend/stylesheets/index.scss
@@ -3,7 +3,8 @@
 @import 'gradients';
 
 $primary-green: #3BC363;
-$primary-gray: #C8C8C8;
+$primary-gray: #CBD0CD;
+$regular-font-size: 22px;
 
 body {
   display: block;
@@ -36,76 +37,7 @@ p {
   line-height: 1.5em;
 }
 
+@import 'footer';
+@import 'modal';
 @import 'landing';
-
-#modal {
-  &.hidden {
-    display: none;
-  }
-
-  .modal-content {
-    padding: 30px;
-  }
-
-  button {
-    float: right;
-  }
-}
-
-#configuration-container {
-  > h1 {
-    > i {
-      color: $primary-green;
-      margin-right: 10px;
-    }
-  }
-}
-
-.days-list {
-  display: inline-block;
-  margin-left: 20px;
-
-  > li {
-    display: inline;
-    color: $primary-gray;
-    font-weight: bold;
-    cursor: pointer;
-
-    &:not(:last-child) {
-      margin-right: 5px;
-    }
-
-    &.selected {
-      color: $primary-green;
-    }
-  }
-}
-
-.channels-list {
-  > li {
-    > i {
-      margin-right: 10px;
-      color: $primary-gray;
-
-      &.invited {
-        color: $primary-green;
-      }
-      &.uninvited {
-        color: #FFC202;
-      }
-    }
-  }
-}
-
-.themes-list {
-  > li {
-    > i {
-      margin-left: 10px;
-      color: $primary-green;
-
-      &.is-fetching {
-        color: $primary-gray;
-      }
-    }
-  }
-}
+@import 'configuration';
