--- a/public/stylesheet.bundle.css
+++ b/public/stylesheet.bundle.css
@@ -2101,6 +2101,33 @@ p {
   margin: 0;
   line-height: 1.5em; }
 
+footer {
+  padding: 30px; }
+  footer > ul {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+    justify-content: center;
+    font-size: 22px; }
+    footer > ul > li:not(:last-child) {
+      margin-right: 20px; }
+    footer > ul > li > a {
+      color: #CBD0CD;
+      text-decoration: none; }
+
+#modal.hidden {
+  display: none; }
+
+#modal .modal-content {
+  padding: 30px; }
+
+#modal button {
+  float: right; }
+
 .slack-button {
   display: -webkit-flex;
   display: -moz-flex;
@@ -2111,7 +2138,7 @@ p {
   -moz-align-items: center;
   align-items: center;
   background: #FFFFFF;
-  border: 1px solid #C8C8C8;
+  border: 1px solid #CBD0CD;
   border-radius: 8px;
   cursor: pointer;
   color: #222222;
@@ -2129,12 +2156,12 @@ p {
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF2BAA4C', endColorstr='#FF3DA44C', GradientType=1); }
 
-#landing-container section.top {
+#landing-container > section.top {
   position: relative;
   padding: 30px;
   color: #FFFFFF;
   z-index: 1; }
-  #landing-container section.top .bg {
+  #landing-container > section.top > .bg {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -2145,7 +2172,7 @@ p {
     background-image: url("/images/MB-bg.png");
     background-repeat: repeat;
     background-size: 400px; }
-  #landing-container section.top header {
+  #landing-container > section.top > header {
     display: -webkit-flex;
     display: -moz-flex;
     display: -ms-flexbox;
@@ -2159,7 +2186,7 @@ p {
     -moz-align-items: center;
     align-items: center;
     font-size: 32px; }
-    #landing-container section.top header .logo {
+    #landing-container > section.top > header .logo {
       display: -webkit-flex;
       display: -moz-flex;
       display: -ms-flexbox;
@@ -2169,52 +2196,64 @@ p {
       -moz-align-items: center;
       align-items: center;
       font-weight: 200; }
-      #landing-container section.top header .logo strong {
+      #landing-container > section.top > header .logo strong {
         font-weight: 500; }
-      #landing-container section.top header .logo .main-logo {
+      #landing-container > section.top > header .logo .main-logo {
         margin-right: 15px;
         width: 71px;
         height: 67px;
         background-image: url("/images/BorisIcon@2x.png");
         background-size: cover; }
-  #landing-container section.top .boris {
-    font-size: 48px;
-    max-width: 800px;
-    margin: 40px auto 60px auto;
-    text-align: center; }
-    #landing-container section.top .boris .main-action {
-      display: -webkit-flex;
-      display: -moz-flex;
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-pack: center;
-      -webkit-justify-content: center;
-      -moz-justify-content: center;
-      justify-content: center;
-      -ms-flex-align: center;
-      -webkit-align-items: center;
-      -moz-align-items: center;
-      align-items: center;
-      margin-top: 60px; }
-      #landing-container section.top .boris .main-action .boris-logo {
-        background-image: url("/images/Boris@2x.png");
-        background-size: cover;
-        width: 122px;
-        height: 123px;
-        margin-right: 10px; }
-      #landing-container section.top .boris .main-action .dashed-arrow {
-        background-image: url("/images/Arrow@2x.png");
-        background-size: cover;
-        width: 74px;
-        height: 13px;
-        margin-right: 20px; }
-  #landing-container section.top > p {
-    max-width: 1000px;
-    margin: 0 auto;
-    font-size: 32px;
-    text-align: center; }
+  #landing-container > section.top > .content {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-direction: column;
+    -moz-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    align-items: center; }
+    #landing-container > section.top > .content > .boris {
+      font-size: 48px;
+      max-width: 800px;
+      margin: 40px 0 60px 0;
+      text-align: center; }
+      #landing-container > section.top > .content > .boris .main-action {
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-pack: center;
+        -webkit-justify-content: center;
+        -moz-justify-content: center;
+        justify-content: center;
+        -ms-flex-align: center;
+        -webkit-align-items: center;
+        -moz-align-items: center;
+        align-items: center;
+        margin-top: 60px; }
+        #landing-container > section.top > .content > .boris .main-action .boris-logo {
+          background-image: url("/images/Boris@2x.png");
+          background-size: cover;
+          width: 122px;
+          height: 123px;
+          margin-right: 10px; }
+        #landing-container > section.top > .content > .boris .main-action .dashed-arrow {
+          background-image: url("/images/Arrow@2x.png");
+          background-size: cover;
+          width: 74px;
+          height: 13px;
+          margin-right: 20px; }
+    #landing-container > section.top > .content > p {
+      max-width: 1000px;
+      font-size: 32px;
+      text-align: center; }
 
-#landing-container section.features {
+#landing-container > section.features {
   display: -webkit-flex;
   display: -moz-flex;
   display: -ms-flexbox;
@@ -2228,25 +2267,25 @@ p {
   flex-wrap: wrap;
   background-color: #FFFFFF;
   padding: 30px; }
-  #landing-container section.features > .slack-window {
+  #landing-container > section.features > .slack-window {
     margin: 0 30px 10px 0;
     width: 660px;
     height: 491px;
     background-image: url("/images/SlackWindow@2x.png");
     background-size: cover; }
-  #landing-container section.features > .description {
+  #landing-container > section.features > .description {
     width: 660px;
     padding-top: 3px; }
-    #landing-container section.features > .description > h1 {
+    #landing-container > section.features > .description > h1 {
       font-size: 32px;
       margin-bottom: 30px; }
-    #landing-container section.features > .description > ul {
+    #landing-container > section.features > .description > ul {
       font-size: 22px;
       margin-left: 2em; }
-      #landing-container section.features > .description > ul > li {
+      #landing-container > section.features > .description > ul > li {
         position: relative;
         margin-bottom: 20px; }
-        #landing-container section.features > .description > ul > li:before {
+        #landing-container > section.features > .description > ul > li:before {
           content: "\F111";
           font-family: FontAwesome;
           color: #3BC363;
@@ -2254,7 +2293,7 @@ p {
           left: -2em;
           top: 2px; }
 
-#landing-container section.bottom {
+#landing-container > section.bottom {
   display: -webkit-flex;
   display: -moz-flex;
   display: -ms-flexbox;
@@ -2269,53 +2308,43 @@ p {
   align-items: center;
   padding: 30px;
   color: #FFFFFF; }
-  #landing-container section.bottom a {
+  #landing-container > section.bottom a {
     color: #FFFFFF; }
-  #landing-container section.bottom > p {
+  #landing-container > section.bottom > p {
     font-size: 22px;
     text-align: center;
     max-width: 1000px; }
-    #landing-container section.bottom > p:first-of-type {
+    #landing-container > section.bottom > p:first-of-type {
       margin: 40px 0; }
-    #landing-container section.bottom > p:last-of-type {
+    #landing-container > section.bottom > p:last-of-type {
       font-size: 26px; }
 
-#modal.hidden {
-  display: none; }
-
-#modal .modal-content {
+#configuration-container {
   padding: 30px; }
-
-#modal button {
-  float: right; }
-
-#configuration-container > h1 > i {
-  color: #3BC363;
-  margin-right: 10px; }
-
-.days-list {
-  display: inline-block;
-  margin-left: 20px; }
-  .days-list > li {
-    display: inline;
-    color: #C8C8C8;
-    font-weight: bold;
-    cursor: pointer; }
-    .days-list > li:not(:last-child) {
-      margin-right: 5px; }
-    .days-list > li.selected {
+  #configuration-container > h1 > i {
+    color: #3BC363;
+    margin-right: 10px; }
+  #configuration-container .days-list {
+    display: inline-block;
+    margin-left: 20px; }
+    #configuration-container .days-list > li {
+      display: inline;
+      color: #CBD0CD;
+      font-weight: bold;
+      cursor: pointer; }
+      #configuration-container .days-list > li:not(:last-child) {
+        margin-right: 5px; }
+      #configuration-container .days-list > li.selected {
+        color: #3BC363; }
+  #configuration-container .channels-list > li > i {
+    margin-right: 10px;
+    color: #CBD0CD; }
+    #configuration-container .channels-list > li > i.invited {
       color: #3BC363; }
-
-.channels-list > li > i {
-  margin-right: 10px;
-  color: #C8C8C8; }
-  .channels-list > li > i.invited {
+    #configuration-container .channels-list > li > i.uninvited {
+      color: #FFC202; }
+  #configuration-container .themes-list > li > i {
+    margin-left: 10px;
     color: #3BC363; }
-  .channels-list > li > i.uninvited {
-    color: #FFC202; }
-
-.themes-list > li > i {
-  margin-left: 10px;
-  color: #3BC363; }
-  .themes-list > li > i.is-fetching {
-    color: #C8C8C8; }
+    #configuration-container .themes-list > li > i.is-fetching {
+      color: #CBD0CD; }
