--- a/frontend/stylesheets/landing.scss
+++ b/frontend/stylesheets/landing.scss
@@ -1,4 +1,3 @@
-$primary-font-size: 32px;
 $giant-font-size: $primary-font-size * 1.5;
 
 @import 'slack_button';
@@ -34,7 +33,7 @@ $giant-font-size: $primary-font-size * 1.5;
 
       font-size: $primary-font-size;
 
-      .logo {
+      > .logo {
         @include flexbox;
         @include align-items(center);
 
@@ -44,7 +43,7 @@ $giant-font-size: $primary-font-size * 1.5;
           font-weight: 500;
         }
 
-        .main-logo {
+        > .main-logo {
           margin-right: 15px;
           width: 71px;
           height: 67px;
@@ -149,7 +148,7 @@ $giant-font-size: $primary-font-size * 1.5;
     @include flex-direction(column);
     @include align-items(center);
 
-    padding: 30px;
+    padding: 50px 30px 30px 30px;
     color: #FFFFFF;
 
     a {
